<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_photo">It is a photo</string>
    <string name="description_select_photo">Select a photo</string>
    <string name="description_take_photo">Take a photo</string>
    <string name="description_backwards">Go back</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="post_image">Post Image</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="like_error">Like failure: try again later</string>
    <string name="save_error">Saving failure: try again later</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="saved">Saved on server</string>
    <string name="done">Saved offline</string>
    <string name="newer_posts_button">Recent posts</string>
    <string name="description_newer_posts_button">Recent posts that have not been read</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Not now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signed_out">You have signed out</string>
    <string name="want_to_sign_in">I want to sign in</string>
    <string name="want_to_sign_out">Confirm signing out</string>
    <string name="warn_out">Only authorized users can post and like.</string>
    <string name="not_confirmed">Passwords do not match!</string>
    <string name="avatar">Avatar upload</string>
    <string name="fromServer">Hello from server %1$s</string>


</resources>