<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.NewPostFragment">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/authWindow"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_photo"
            tools:srcCompat="@sample/posts.json/data/attachment"
            />

        <LinearLayout
            android:id="@+id/authWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/avatar"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_button_min_size"
                android:background="@color/colorDark"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/ic_netology_48dp" />

            <Button
                android:id="@+id/uploadAvatar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_button_min_size"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/avatar"
                app:icon="@drawable/ic_photo_24"
                />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/username"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/login"
                    android:hint="@string/login" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/password"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/confirm_password"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/up"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/sign_up"
                android:text="@string/sign_up" />
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>